--- a/deployserver.yml
+++ b/deployserver.yml
@@ -24,7 +24,7 @@ Resources:
         ToPort: 80
         CidrIp: 0.0.0.0/0
 
-  WebServerSecGroup:
+  WebServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Allow http to our hosts and SSH from local only
@@ -46,7 +46,7 @@ Resources:
         ToPort: 65535
         CidrIp: 0.0.0.0/0
 
-WebAppLaunchConfig:
+  WebAppLaunchConfiguration:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
       UserData:
@@ -75,24 +75,80 @@ WebAppLaunchConfig:
           docker build -t "test:test-docker" .
           usermod -aG docker ubuntu
           docker run -d -p 8080:8080 "test:test-docker"
-      ImageId: ami-005bdb005fb00e791
+      ImageId: ami-0d1cd67c26f5fca19
+      KeyName: that-one
       SecurityGroups:
-      - Ref: WebServerSecGroup
+        - Ref: WebServerSecurityGroup
       InstanceType: t3.medium
       BlockDeviceMappings:
-      - DeviceName: "/dev/sdk"
-        Ebs:
-          VolumeSize: '10'
+        - DeviceName: "/dev/sdk"
+          Ebs:
+            VolumeSize: '10'
 
-WebAppGroup:
-      Type: AWS::AutoScaling::AutoScalingGroup
-      Properties:
-        VPCZoneIdentifier:
-        - Fn::ImportValue: 
+  WebAppGroup:
+    Type: AWS::AutoScaling::AutoScalingGroup
+    Properties:
+      VPCZoneIdentifier:
+        - Fn::ImportValue:
             !Sub "${EnvironmentName}-PRIV-NETS"
-        LaunchConfigurationName:
-          Ref: WebAppLaunchConfig
-        MinSize: '4'
-        MaxSize: '6'
-        TargetGroupARNs:
-        - Ref: WebAppTargetGroup    
+      LaunchConfigurationName:
+        Ref: WebAppLaunchConfiguration
+      MinSize: '4'
+      MaxSize: '6'
+      TargetGroupARNs:
+        - Ref: WebAppTargetGroup
+
+  WebAppLB:
+    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+    Properties:
+      Subnets:
+        - Fn::ImportValue: !Sub "${EnvironmentName}-PRI1-SN"
+        - Fn::ImportValue: !Sub "${EnvironmentName}-PRI2-SN"
+      SecurityGroups:
+        - Ref: LBSecGroup
+
+  Listener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      DefaultActions:
+        - Type: forward
+          TargetGroupArn:
+            Ref: WebAppTargetGroup
+      LoadBalancerArn:
+        Ref: WebAppLB
+      Port: '80'
+      Protocol: HTTP
+
+  ALBListenerRule:
+    Type: AWS::ElasticLoadBalancingV2::ListenerRule
+    Properties:
+      Actions:
+        - Type: forward
+          TargetGroupArn: !Ref WebAppTargetGroup
+      Conditions:
+        - Field: path-pattern
+          Values: [/]
+      ListenerArn: !Ref 'Listener'
+      Priority: 1
+
+  WebAppTargetGroup:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties:
+      HealthCheckIntervalSeconds: 10
+      HealthCheckPath: /
+      HealthCheckProtocol: HTTP
+      HealthCheckTimeoutSeconds: 8
+      HealthyThresholdCount: 2
+      Port: 80
+      Protocol: HTTP
+      UnhealthyThresholdCount: 5
+      VpcId:
+        Fn::ImportValue:
+          Fn::Sub: "${EnvironmentName}-VPCID"
+
+Outputs:
+  BackupLoadBalancerDNSName:
+    Description: The DNSName of the load balancer
+    Value: !Join ["", ["http://", !GetAtt WebAppLB.DNSName]]
+    Export:
+      Name: !Sub ${EnvironmentName}-LB-DNSName
